// Copyright (c) Google LLC
// SPDX-License-Identifier: Apache-2.0
syntax = "proto3";

package rpc_demo.remoteconfig;

message GetValueResponse {
}

message GetValueUpdate {
  string key = 1;
  oneof value {
    string string_value = 2;
    int64 int_value = 3;
    bool bool_value = 4;
  }
}

service RemoteConfig {
  rpc GetValue(stream GetValueUpdate) returns (stream GetValueResponse) {}
}
